# RedStar

./: CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake  Findglf3.cmake
include/core/: engine.cpp  engine.h
include/core/events/: rs_event_listener.h  rs_event_manager.cpp  rs_event_manager.h  rs_events.h
include/core/shaders/: shader.hpp
include/core/shaders/vert/: main.glsl  main.vert
include/core/systems/: rs_input.h  rs_render.cpp  rs_render.h  rs_system.h  rs_window.cpp  rs_window.h
shaders/: shader.hpp  shader_loader.hpp
shaders/frag/: shader.frag
shaders/vert/: vertex.vert
src/: main.cpp
src/classes/: camera.hpp  entity.hpp
